--- a/index.html
+++ b/index.html
@@ -11,5 +11,78 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
 </head>
-
+<body>
+    <header>
+        <h1>josie griffin</h1>
+        <hr>
+        <nav>
+            <ul>
+                <li><a>about me</a></li>
+                <li><a>work</a></li>
+                <li><a>contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <hr>
+            <figure>
+                <img src="./assets/images/profile.jpg">
+            </figure>
+            <h2> hi! i'm josie.</h2>
+            <h3>full stack developer</h3>
+            <p>based in pennsylvania</p>
+            <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit, maxime veritatis! Dolorum asperiores et sit modi iste ducimus maiores iure voluptatibus quis optio, minus similique nisi fugiat unde repellat corrupti.
+            Porro atque voluptates commodi, possimus, est quaerat deserunt soluta deleniti dicta ut, incidunt eum repellat aliquam excepturi ratione dolorum eligendi nostrum molestiae laboriosam officiis accusamus! Ullam illo aperiam doloribus aut?
+            Sed voluptatum, fugit excepturi distinctio expedita exercitationem blanditiis explicabo aliquid ea quisquam doloremque harum voluptatibus consectetur odio eligendi aspernatur totam mollitia, aut magnam debitis velit ut minus. Modi, deserunt reprehenderit!
+            Atque, ex quia commodi accusamus architecto totam pariatur consequatur, voluptatem a repellat voluptatibus iusto exercitationem quasi, sapiente non obcaecati cupiditate. Ipsum possimus cupiditate temporibus maxime quos assumenda vitae vero dolor?
+            </p>
+        </section>
+        <section>
+            <h2>my work</h2>
+            <figure>
+                <img src="" alt="">
+                    <figcap></figcap>
+                </img>
+            </figure>
+            <figure>
+                <img src="./assets/images/placeholder.png" alt="">
+                <figcap></figcap>
+                </img>
+            </figure>
+            <figure>
+                <img src="./assets/images/placeholder.png" alt="">
+                <figcap></figcap>
+                </img>
+            </figure>
+            <figure>
+                <img src="./assets/images/placeholder.png" alt="">
+                <figcap></figcap>
+                </img>
+            </figure>
+            <figure>
+                <img src="./assets/images/placeholder.png" alt="">
+                <figcap></figcap>
+                </img>
+            </figure>
+            <figure>
+                <img src="./assets/images/placeholder.png" alt="">
+                <figcap></figcap>
+                </img>
+            </figure>
+        </section>
+        <section>
+            <h3>contact me!</h3>
+        </section>
+    </main>
+    <footer>
+        <p>find me elsewhere!</p>
+        <ul>
+            <li>github</li>
+            <li>linkedin</li>
+            <li>email</li>
+        </ul>
+        <small>&copy josie griffin dev.</small>
+    </footer>
+</body>
 </html>
