--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <section>
             <h2>my work</h2>
             <figure>
-                <img src="" alt="">
+                <img src="./assets/images/placeholder.png" alt="">
                     <figcap></figcap>
                 </img>
             </figure>
