Add html form, image alts, edit aside

--- a/index.html
+++ b/index.html
@@ -25,43 +25,47 @@
     </header>
     <main>
         <section>
-            <hr>
+            
             <figure>
-                <img src="./assets/images/profile.jpg">
+                <img src="./assets/images/profile.jpg" alt="A placeholder image of Josie on film holding many frogs.">
             </figure>
-            <h2> hi! i'm josie.</h2>
-            <h3>full stack developer</h3>
-            <p>based in pennsylvania</p>
-            <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit, maxime veritatis! Dolorum asperiores et sit modi iste ducimus maiores iure voluptatibus quis optio, minus similique nisi fugiat unde repellat corrupti.
-            Porro atque voluptates commodi, possimus, est quaerat deserunt soluta deleniti dicta ut, incidunt eum repellat aliquam excepturi ratione dolorum eligendi nostrum molestiae laboriosam officiis accusamus! Ullam illo aperiam doloribus aut?
-            Sed voluptatum, fugit excepturi distinctio expedita exercitationem blanditiis explicabo aliquid ea quisquam doloremque harum voluptatibus consectetur odio eligendi aspernatur totam mollitia, aut magnam debitis velit ut minus. Modi, deserunt reprehenderit!
-            Atque, ex quia commodi accusamus architecto totam pariatur consequatur, voluptatem a repellat voluptatibus iusto exercitationem quasi, sapiente non obcaecati cupiditate. Ipsum possimus cupiditate temporibus maxime quos assumenda vitae vero dolor?
-            </p>
+            <hr>
+            <aside>
+                <h2> hi! i'm josie.</h2>
+                <h3>full stack developer</h3>
+                <p>based in pennsylvania</p>
+                <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit, maxime veritatis! Dolorum asperiores et sit modi iste ducimus maiores iure voluptatibus quis optio, minus similique nisi fugiat unde repellat corrupti.
+                Porro atque voluptates commodi, possimus, est quaerat deserunt soluta deleniti dicta ut, incidunt eum repellat aliquam excepturi ratione dolorum eligendi nostrum molestiae laboriosam officiis accusamus! Ullam illo aperiam doloribus aut?
+                Sed voluptatum, fugit excepturi distinctio expedita exercitationem blanditiis explicabo aliquid ea quisquam doloremque harum voluptatibus consectetur odio eligendi aspernatur totam mollitia, aut magnam debitis velit ut minus. Modi, deserunt reprehenderit!
+                Atque, ex quia commodi accusamus architecto totam pariatur consequatur, voluptatem a repellat voluptatibus iusto exercitationem quasi, sapiente non obcaecati cupiditate. Ipsum possimus cupiditate temporibus maxime quos assumenda vitae vero dolor?
+                </p>
+            </aside>
+            
         </section>
         <section>
             <h2>my work</h2>
             <figure>
-                <img src="./assets/images/placeholder.png" alt="">
+                <img src="./assets/images/placeholder.png" alt="A placeholder image.">
                     <figcap></figcap>
                 </img>
             </figure>
             <figure>
-                <img src="./assets/images/placeholder.png" alt="">
+                <img src="./assets/images/placeholder.png" alt="A placeholder image.">
                 <figcap></figcap>
                 </img>
             </figure>
             <figure>
-                <img src="./assets/images/placeholder.png" alt="">
+                <img src="./assets/images/placeholder.png" alt="A placeholder image.">
                 <figcap></figcap>
                 </img>
             </figure>
             <figure>
-                <img src="./assets/images/placeholder.png" alt="">
+                <img src="./assets/images/placeholder.png" alt="A placeholder image.">
                 <figcap></figcap>
                 </img>
             </figure>
             <figure>
-                <img src="./assets/images/placeholder.png" alt="">
+                <img src="./assets/images/placeholder.png" alt="A placeholder image.">
                 <figcap></figcap>
                 </img>
             </figure>
@@ -73,6 +77,15 @@
         </section>
         <section>
             <h3>contact me!</h3>
+            <form>
+                <label for="contactname">name</label>
+                <input type="text" id="contactname" name="contactname" placeholder="your name">
+                <label for="email">email</label>
+                <input type="email" placeholder="your@email.com" id="email" name="email">
+                <label for="message">your message!</label>
+                <textarea id="message" name="message" placeholder="" rows="15" cols="30"></textarea>
+                <input type="submit" value="submit">
+            </form>
         </section>
     </main>
     <footer>
