Add social media logos and links to contact

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
     <header>
-        <h1>josie griffin</h1>
+        <h1 class=".main">josie griffin</h1>
         <hr>
-        <nav>
+        <nav class="main.nav">
             <ul>
                 <li><a>about me</a></li>
                 <li><a>work</a></li>
@@ -86,6 +86,11 @@
                 <textarea id="message" name="message" placeholder="" rows="15" cols="30"></textarea>
                 <input type="submit" value="submit">
             </form>
+            <figure class="contact-socials">
+                <a href="https://github.com/josielynngriffin"><img src="./assets/images/github-logo.svg" alt="A graphic of github's logo." class="contact-socials__logo"></a>
+                <a href="https://linkedin.com"><img src="./assets/images/linkedin-logo.svg" alt="A graphic of linkedin's logo." class="contact-socials__logo"></a>
+                <a href="mailto: jelynngriffin@gmail.com"><img src="./assets/images/email-logo.svg" alt="A graphic of an email logo." class="contact-socials__logo"></a>
+            </figure>
         </section>
     </main>
     <footer>
