Add class to nav links for styling

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <hr class="nav__break">
         <nav class="main.nav">
             <ul>
-                <li><a href="#aboutme">about me</a></li>
-                <li><a href="#portfolio">work</a></li>
-                <li><a href="#contact">contact</a></li>
+                <li ><a class="nav__link" href="#aboutme">about me</a></li>
+                <li ><a class="nav__link" href="#portfolio">work</a></li>
+                <li ><a class="nav__link" href="#contact">contact</a></li>
             </ul>
         </nav>
     </header>
