Add breaks in form element

--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
         <section id="contact">
             <h3>contact me!</h3>
             <form>
-                <label for="contactname">name</label>
-                <input type="text" id="contactname" name="contactname" placeholder="your name">
-                <label for="email">email</label>
-                <input type="email" placeholder="your@email.com" id="email" name="email">
-                <label for="message">your message!</label>
-                <textarea id="message" name="message" placeholder="" rows="15" cols="30"></textarea>
-                <input type="submit" value="submit">
+                <label for="contactname">name</label><br>
+                <input type="text" id="contactname" name="contactname" placeholder="your name"><br>
+                <label for="email">email</label><br>
+                <input type="email" placeholder="your@email.com" id="email" name="email"><br>
+                <label for="message">your message!</label><br>
+                <textarea id="message" name="message" placeholder="" rows="15" cols="30"></textarea><br>
+                <input type="submit" value="submit"><br>
             </form>
             <figure class="contact-socials">
                 <a href="https://github.com/josielynngriffin"><img src="./assets/images/github-logo.svg" alt="A graphic of github's logo." class="contact-socials__logo"></a>
