Add classes and html content

--- a/index.html
+++ b/index.html
@@ -49,37 +49,35 @@
             </aside>
 
         </section>
-        <section id="portfolio">
-            <h2>my work</h2>
-            <figure>
-                <img src="./assets/images/placeholder.png" alt="A placeholder image.">
-                <figcap></figcap>
-                </img>
+        <section class="portfolio" id="portfolio">
+            <h2 class="portfolio__header">my work</h2>
+            <figure class="portfolio__figure portfolio__figure--focus">
+                <img src="./assets/images/placeholder.png" alt="A placeholder image."></img>
+                <figcap>placeholder project</figcap>
             </figure>
-            <figure>
-                <img src="./assets/images/placeholder.png" alt="A placeholder image.">
-                <figcap></figcap>
-                </img>
+            <figure class="portfolio__figure portfolio__figure--regular">
+                <img src="./assets/images/placeholder.png" alt="A placeholder image."></img>
+                <figcap>placeholder project</figcap>
             </figure>
-            <figure>
-                <img src="./assets/images/placeholder.png" alt="A placeholder image.">
-                <figcap></figcap>
-                </img>
+            <figure class="portfolio__figure portfolio__figure--regular">
+                <img src="./assets/images/placeholder.png" alt="A placeholder image."></img>
+                <figcap>placeholder project</figcap>
             </figure>
-            <figure>
-                <img src="./assets/images/placeholder.png" alt="A placeholder image.">
-                <figcap></figcap>
-                </img>
+            <figure class="portfolio__figure portfolio__figure--regular"">
+                <img src="./assets/images/placeholder.png" alt="A placeholder image."></img>
+                <figcap>placeholder project</figcap>
             </figure>
-            <figure>
-                <img src="./assets/images/placeholder.png" alt="A placeholder image.">
-                <figcap></figcap>
-                </img>
+            <figure class="portfolio__figure portfolio__figure--regular"">
+                <img src="./assets/images/placeholder.png" alt="A placeholder image."></img>
+                <figcap>placeholder project</figcap>
             </figure>
-            <figure>
-                <img src="./assets/images/placeholder.png" alt="">
-                <figcap></figcap>
-                </img>
+            <figure class="portfolio__figure portfolio__figure--regular"">
+                <img src="./assets/images/placeholder.png" alt=""></img>
+                <figcap>placeholder project</figcap>
+            </figure>
+            <figure class="portfolio__figure portfolio__figure--regular"">
+                <img src="./assets/images/placeholder.png" alt=""></img>
+                <figcap>placeholder project</figcap>
             </figure>
         </section>
         <section id="contact">
