--- a/index.html
+++ b/index.html
@@ -53,31 +53,31 @@
             <h2 class="portfolio__header">my work</h2>
             <figure class="portfolio__figure portfolio__figure--focus">
                 <img src="./assets/images/placeholder.png" alt="A placeholder image."></img>
-                <figcap>placeholder project</figcap>
+                <figcap class="portfolio__caption">placeholder project</figcap>
             </figure>
             <figure class="portfolio__figure portfolio__figure--regular">
                 <img src="./assets/images/placeholder.png" alt="A placeholder image."></img>
-                <figcap>placeholder project</figcap>
+                <figcap class="portfolio__caption">placeholder project</figcap>
             </figure>
             <figure class="portfolio__figure portfolio__figure--regular">
                 <img src="./assets/images/placeholder.png" alt="A placeholder image."></img>
-                <figcap>placeholder project</figcap>
+                <figcap class="portfolio__caption">placeholder project</figcap>
             </figure>
             <figure class="portfolio__figure portfolio__figure--regular"">
                 <img src="./assets/images/placeholder.png" alt="A placeholder image."></img>
-                <figcap>placeholder project</figcap>
+                <figcap class="portfolio__caption">placeholder project</figcap>
             </figure>
             <figure class="portfolio__figure portfolio__figure--regular"">
                 <img src="./assets/images/placeholder.png" alt="A placeholder image."></img>
-                <figcap>placeholder project</figcap>
+                <figcap class="portfolio__caption">placeholder project</figcap>
             </figure>
             <figure class="portfolio__figure portfolio__figure--regular"">
                 <img src="./assets/images/placeholder.png" alt=""></img>
-                <figcap>placeholder project</figcap>
+                <figcap class="portfolio__caption">placeholder project</figcap>
             </figure>
             <figure class="portfolio__figure portfolio__figure--regular"">
                 <img src="./assets/images/placeholder.png" alt=""></img>
-                <figcap>placeholder project</figcap>
+                <figcap class="portfolio__caption">placeholder project</figcap>
             </figure>
         </section>
         <section id="contact">
