--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
                 <input type="submit" value="submit"><br>
             </form>
             <figure class="contact-socials">
-                <a href="https://github.com/josielynngriffin"><img src="./assets/images/github-logo.svg"
+                <a href="https://github.com/josielynngriffin" class="contact-socials__link"><img src="./assets/images/github-logo.svg"
                         alt="A graphic of github's logo." class="contact-socials__logo"></a>
-                <a href="https://linkedin.com"><img src="./assets/images/linkedin-logo.svg"
+                <a href="https://linkedin.com" class="contact-socials__link"><img src="./assets/images/linkedin-logo.svg"
                         alt="A graphic of linkedin's logo." class="contact-socials__logo"></a>
-                <a href="mailto: jelynngriffin@gmail.com"><img src="./assets/images/email-logo.svg"
+                <a href="mailto: jelynngriffin@gmail.com" class="contact-socials__link"><img src="./assets/images/email-logo.svg"
                         alt="A graphic of an email logo." class="contact-socials__logo"></a>
             </figure>
         </section>
