Add contact information

--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
                 <a href="mailto: jelynngriffin@gmail.com" class="contact-socials__link"><img src="./assets/images/email-logo.svg"
                         alt="A graphic of an email logo." class="contact-socials__logo"></a>
             </figure>
+           <section class="contactInfo">
+                <h4 class="contactInfo__header">my email!</h4>
+                <img src="./assets/images/email-symbol.svg" alt="A graphic of an email logo" class="contactInfo__img">
+                <p class="contactInfo__info">jelynngriffin@gmail.com</p>
+           </section>
         </section>
     </main>
     <footer>
