Add classes to HTML, modify content

--- a/index.html
+++ b/index.html
@@ -81,15 +81,15 @@
             </figure>
         </section>
         <section id="contact">
-            <h3>contact me!</h3>
-            <form>
-                <label for="contactname">name</label><br>
-                <input type="text" id="contactname" name="contactname" placeholder="your name"><br>
-                <label for="email">email</label><br>
-                <input type="email" placeholder="your@email.com" id="email" name="email"><br>
-                <label for="message">your message!</label><br>
-                <textarea id="message" name="message" placeholder="" rows="15" cols="30"></textarea><br>
-                <input type="submit" value="submit"><br>
+            <form class="contactForm__cont">
+                <h3 class="contactForm__header">contact me!</h3>
+                <label for="contactname" class="contactForm__label">name</label><br>
+                <input type="text" id="contactname" name="contactname" placeholder="your name" class="contactForm__input contactForm__input--small"><br>
+                <label for="email" class="contactForm__label">email</label><br>
+                <input type="email" placeholder="your@email.com" id="email" name="email" class="contactForm__input contactForm__input--small"><br>
+                <label for="message" class="contactForm__label">message!</label><br>
+                <textarea id="message" name="message" placeholder="your message" rows="15" cols="30" class=" contactForm__input contactForm__message"></textarea><br>
+                <input type="submit" value="submit" class="contactForm__button"><br>
             </form>
             <figure class="contact-socials">
                 <a href="https://github.com/josielynngriffin" class="contact-socials__link"><img src="./assets/images/github-logo.svg"
