--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
                 <figcap class="portfolio__caption">placeholder project</figcap>
             </figure>
             <figure class="portfolio__figure portfolio__figure--regular"">
-                <img src="./assets/images/placeholder.png" alt=""></img>
+                <img src="./assets/images/placeholder.png" alt="A placeholder image."></img>
                 <figcap class="portfolio__caption">placeholder project</figcap>
             </figure>
             <figure class="portfolio__figure portfolio__figure--regular"">
-                <img src="./assets/images/placeholder.png" alt=""></img>
+                <img src="./assets/images/placeholder.png" alt="A placeholder image."></img>
                 <figcap class="portfolio__caption">placeholder project</figcap>
             </figure>
         </section>
