--- a/index.html
+++ b/index.html
@@ -52,8 +52,11 @@
         <section class="portfolio" id="portfolio">
             <h2 class="portfolio__header">my work</h2>
             <figure class="portfolio__figure portfolio__figure--focus">
-                <img src="./assets/images/placeholder.png" alt="A placeholder image."></img>
-                <figcap class="portfolio__caption">placeholder project</figcap>
+                <a href="https://github.com/Cat-Scratch-Feev/Catterday" class="hover"><img src="./assets/images/catterday-project-screenshot.png" alt="A placeholder image."></img></a>
+                <figcap class="portfolio__caption portfolio-focus__caption">
+                    <p class="project__title">CATTERDAY</p>
+                    <p> > html, css, javascript</p>
+                </figcap>
             </figure>
             <figure class="portfolio__figure portfolio__figure--regular">
                 <img src="./assets/images/placeholder.png" alt="A placeholder image."></img>
