--- a/index.html
+++ b/index.html
@@ -52,34 +52,37 @@
         <section class="portfolio" id="portfolio">
             <h2 class="portfolio__header">my work</h2>
             <figure class="portfolio__figure portfolio__figure--focus">
-                <a href="https://github.com/Cat-Scratch-Feev/Catterday" class="hover"><img src="./assets/images/catterday-project-screenshot.png" alt="A placeholder image."></img></a>
+                <a href="https://github.com/Cat-Scratch-Feev/Catterday" class="hover"><img src="./assets/images/catterday-project-screenshot.png" alt="A placeholder image." class="portfolio__figure--image"></img></a>
                 <figcap class="portfolio__caption portfolio-focus__caption">
                     <p class="project__title">CATTERDAY</p>
                     <p> > html, css, javascript</p>
                 </figcap>
             </figure>
             <figure class="portfolio__figure portfolio__figure--regular">
-                <img src="./assets/images/placeholder.png" alt="A placeholder image."></img>
-                <figcap class="portfolio__caption">placeholder project</figcap>
+                <a href="https://somniary-00225b8202c3.herokuapp.com/landing" class="hover"><img src="./assets/images/somniary-landing.png" alt="A placeholder image." class="portfolio__figure--image"></img></a>
+                <figcap class="portfolio__caption portfolio-regular__caption">
+                    <p class="project__title">somniary</p>
+                    <p class="project__subtitle"> > javascript, node, express, sequelize, handlebars</p>
+                </figcap>
             </figure>
             <figure class="portfolio__figure portfolio__figure--regular">
-                <img src="./assets/images/placeholder.png" alt="A placeholder image."></img>
+                <a href=""><img src="./assets/images/weather-dashboard.png" alt="A placeholder image." class="portfolio__figure--image"></img></a>
                 <figcap class="portfolio__caption">placeholder project</figcap>
             </figure>
             <figure class="portfolio__figure portfolio__figure--regular"">
-                <img src="./assets/images/placeholder.png" alt="A placeholder image."></img>
+                <img src="./assets/images/placeholder.png" alt="A placeholder image." class="portfolio__figure--image"></img>
                 <figcap class="portfolio__caption">placeholder project</figcap>
             </figure>
             <figure class="portfolio__figure portfolio__figure--regular"">
-                <img src="./assets/images/placeholder.png" alt="A placeholder image."></img>
+                <img src="./assets/images/placeholder.png" alt="A placeholder image." class="portfolio__figure--image"></img>
                 <figcap class="portfolio__caption">placeholder project</figcap>
             </figure>
             <figure class="portfolio__figure portfolio__figure--regular"">
-                <img src="./assets/images/placeholder.png" alt="A placeholder image."></img>
+                <img src="./assets/images/placeholder.png" alt="A placeholder image." class="portfolio__figure--image"></img>
                 <figcap class="portfolio__caption">placeholder project</figcap>
             </figure>
             <figure class="portfolio__figure portfolio__figure--regular"">
-                <img src="./assets/images/placeholder.png" alt="A placeholder image."></img>
+                <img src="./assets/images/placeholder.png" alt="A placeholder image." class="portfolio__figure--image"></img>
                 <figcap class="portfolio__caption">placeholder project</figcap>
             </figure>
         </section>
@@ -125,6 +128,7 @@
             <p>&copy josie griffin dev.</p>
         </small>
     </footer>
+    <script src="https://kit.fontawesome.com/d14b0991e4.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
