Add links to each project, including github and repo

--- a/index.html
+++ b/index.html
@@ -52,37 +52,40 @@
         <section class="portfolio" id="portfolio">
             <h2 class="portfolio__header">my work</h2>
             <figure class="portfolio__figure portfolio__figure--focus">
-                <a href="https://github.com/Cat-Scratch-Feev/Catterday" class="hover"><img src="./assets/images/catterday-project-screenshot.png" alt="A placeholder image." class="portfolio__figure--image"></img></a>
+                <a href="https://cat-scratch-feev.github.io/Catterday/" class="hover" target="_blank"><img src="./assets/images/catterday-project-screenshot.png" alt="A placeholder image." class="portfolio__figure--image"></img></a>
                 <figcap class="portfolio__caption portfolio-focus__caption">
-                    <p class="project__title">CATTERDAY</p>
+                    <p class="project__title">CATTERDAY <a href="https://github.com/Cat-Scratch-Feev/Catterday" target="_blank"><i class="fa-brands fa-github"></i></a> <a href="https://cat-scratch-feev.github.io/Catterday/" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a></p>
                     <p> > html, css, javascript</p>
                 </figcap>
             </figure>
             <figure class="portfolio__figure portfolio__figure--regular">
-                <a href="https://somniary-00225b8202c3.herokuapp.com/landing" class="hover"><img src="./assets/images/somniary-landing.png" alt="A placeholder image." class="portfolio__figure--image"></img></a>
+                <a href="https://somniary-00225b8202c3.herokuapp.com/landing" class="hover" target="_blank"><img src="./assets/images/somniary-landing.png" alt="A placeholder image." class="portfolio__figure--image"></img></a>
                 <figcap class="portfolio__caption portfolio-regular__caption">
-                    <p class="project__title">somniary</p>
+                    <p class="project__title">somniary <a href="https://github.com/Cat-Scratch-Feev/somniary" target="_blank"><i class="fa-brands fa-github"></i></a> <a href="https://somniary-00225b8202c3.herokuapp.com/landing"><i class="fa-solid fa-up-right-from-square"></i></a></p>
                     <p class="project__subtitle"> > javascript, node, express, sequelize, handlebars</p>
                 </figcap>
             </figure>
             <figure class="portfolio__figure portfolio__figure--regular">
-                <a href=""><img src="./assets/images/weather-dashboard.png" alt="A placeholder image." class="portfolio__figure--image"></img></a>
+                <a href="https://josielynngriffin.github.io/weather-dash-challenge-06/index.html" target="_blank"><img src="./assets/images/weather-dashboard.png" alt="A placeholder image." class="portfolio__figure--image"></img></a>
+                <figcap class="portfolio__caption">
+                    <p class="project__title">weather dash <a href="https://github.com/josielynngriffin/weather-dash-challenge-06" target="_blank"><i class="fa-brands fa-github"></i></a> <a href="https://josielynngriffin.github.io/weather-dash-challenge-06/index.html" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a></p>
+                    <p class="project__subtitle"> > html, bootstrap, api</p>
+                </figcap>
+            </figure>
+            <figure class="portfolio__figure portfolio__figure--regular"">
+                <a href=""><img src="./assets/images/placeholder.png" alt="A placeholder image." class="portfolio__figure--image"></img></a>
                 <figcap class="portfolio__caption">placeholder project</figcap>
             </figure>
             <figure class="portfolio__figure portfolio__figure--regular"">
-                <img src="./assets/images/placeholder.png" alt="A placeholder image." class="portfolio__figure--image"></img>
+                <a href=""><img src="./assets/images/placeholder.png" alt="A placeholder image." class="portfolio__figure--image"></img></a>
                 <figcap class="portfolio__caption">placeholder project</figcap>
             </figure>
             <figure class="portfolio__figure portfolio__figure--regular"">
-                <img src="./assets/images/placeholder.png" alt="A placeholder image." class="portfolio__figure--image"></img>
+                <a href=""><img src="./assets/images/placeholder.png" alt="A placeholder image." class="portfolio__figure--image"></img></a>
                 <figcap class="portfolio__caption">placeholder project</figcap>
             </figure>
             <figure class="portfolio__figure portfolio__figure--regular"">
-                <img src="./assets/images/placeholder.png" alt="A placeholder image." class="portfolio__figure--image"></img>
-                <figcap class="portfolio__caption">placeholder project</figcap>
-            </figure>
-            <figure class="portfolio__figure portfolio__figure--regular"">
-                <img src="./assets/images/placeholder.png" alt="A placeholder image." class="portfolio__figure--image"></img>
+                <a href=""><img src="./assets/images/placeholder.png" alt="A placeholder image." class="portfolio__figure--image"></img></a>
                 <figcap class="portfolio__caption">placeholder project</figcap>
             </figure>
         </section>
