--- a/index.html
+++ b/index.html
@@ -39,12 +39,7 @@
                 <h2 class="aboutme__header"> hi! i'm josie</h2>
                 <h3>aspiring full stack developer</h3>
                 <p> > based in pennsylvania</p>
-                <p class="aboutme__blurb"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit, maxime
-                    veritatis! Dolorum asperiores et sit modi iste ducimus maiores iure voluptatibus quis optio, minus
-                    similique nisi fugiat unde repellat corrupti.
-                    Porro atque voluptates commodi, possimus, est quaerat deserunt soluta deleniti dicta ut, incidunt
-                    eum repellat aliquam excepturi ratione dolorum eligendi nostrum molestiae laboriosam officiis
-                    accusamus! Ullam illo aperiam doloribus aut?
+                <p class="aboutme__blurb"> looking to combine creativity,  user-friendly and inclusive designs, and function! i believe in working together toward something greater and making an impact. welcome to my portfolio!
                 </p>
             </aside>
 
